--- a/PHTML/index.phtml
+++ b/PHTML/index.phtml
@@ -50,7 +50,7 @@
 						<a href="#"><?= $portfolio ;?></a>
 					</li>
 					<li>
-						<a href="#"><?= $diplomas ;?></a>
+						<a href="#diplomas"><?= $diplomas ;?></a>
 					</li>
 					<li>
 						<a href="#contact"><?= $contact ;?></a>
@@ -273,104 +273,42 @@
 		<div id="canvas">
 			<?php include "canvas-" . $lang . ".phtml"; ?>
 		</div>
-		<section class="cd-timeline js-cd-timeline">
-		<div class="cd-timeline__container">
-			<div class="cd-timeline__block js-cd-block">
-				<div class="cd-timeline__img cd-timeline__img--picture js-cd-img">
-					<img src="IMG/1043718.svg" alt="Picture">
-				</div> <!-- cd-timeline__img -->
-
-				<div class="cd-timeline__content js-cd-content">
-					<h2>PRÉPARATION AU DCL - ESPAGNOL</h2>
-					<img src="IMG/280px-CNED_Logo_2017_RGB_Baseline.png">
-					<p>Le diplôme de compétence en langue (DCL) est un diplôme national professionnel créé spécialement pour les adultes. Il répond aux besoins du monde économique. Son originalité : évaluer les compétences langagières dans une situation proche de la réalité de travail. En fonction de leur performance, les candidats obtiennent le diplôme avec la mention d'un des niveaux du Cadre européen commun de référence pour les langues (CECRL). Le CNED propose une formation complète en espagnol pour préparer l'examen de certification.</p>
-					<a href="#0" class="cd-timeline__read-more">Read more</a>
-					<span class="cd-timeline__date">2018</span>
-				</div> <!-- cd-timeline__content -->
-			</div> <!-- cd-timeline__block -->
-
-			<div class="cd-timeline__block js-cd-block">
-				<div class="cd-timeline__img cd-timeline__img--picture js-cd-img">
-					<img src="IMG/1043718.svg" alt="Picture">
-				</div> <!-- cd-timeline__img -->
-
-				<div class="cd-timeline__content js-cd-content">
-					<h2>Title of section 2</h2>
-					<img src="IMG/2000px-UdemyLogo.svg.png">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
-					<a href="#0" class="cd-timeline__read-more">Read more</a>
-					<span class="cd-timeline__date">2018</span>
-				</div> <!-- cd-timeline__content -->
-			</div> <!-- cd-timeline__block -->
-
-			<div class="cd-timeline__block js-cd-block">
-				<div class="cd-timeline__img cd-timeline__img--picture js-cd-img">
-					<img src="img/cd-icon-picture.svg" alt="Picture">
-				</div> <!-- cd-timeline__img -->
-
-				<div class="cd-timeline__content js-cd-content">
-					<h2>Title of section 3</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
-					<a href="#0" class="cd-timeline__read-more">Read more</a>
-					<span class="cd-timeline__date">Jan 24</span>
-				</div> <!-- cd-timeline__content -->
-			</div> <!-- cd-timeline__block -->
-
-			<div class="cd-timeline__block js-cd-block">
-				<div class="cd-timeline__img cd-timeline__img--location js-cd-img">
-					<img src="img/cd-icon-location.svg" alt="Location">
-				</div> <!-- cd-timeline__img -->
-
-				<div class="cd-timeline__content js-cd-content">
-					<h2>Title of section 4</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-					<a href="#0" class="cd-timeline__read-more">Read more</a>
-					<span class="cd-timeline__date">Feb 14</span>
-				</div> <!-- cd-timeline__content -->
-			</div> <!-- cd-timeline__block -->
-
-			<div class="cd-timeline__block js-cd-block">
-				<div class="cd-timeline__img cd-timeline__img--location js-cd-img">
-					<img src="img/cd-icon-location.svg" alt="Location">
-				</div> <!-- cd-timeline__img -->
-
-				<div class="cd-timeline__content js-cd-content">
-					<h2>Licence LLCER aire culturelle slave</h2>
-					<h5><a href="https://www.google.fr/maps/place/Inalco/@48.8271046,2.3738506,17z/data=!4m12!1m6!3m5!1s0x47e6723acd3b913f:0x597fb78edf2d647e!2sInalco!8m2!3d48.8271011!4d2.3760393!3m4!1s0x47e6723acd3b913f:0x597fb78edf2d647e!8m2!3d48.8271011!4d2.3760393" target="blank"><i class="fas fa-location-arrow"></i></a> INALCO, PARIS (75), FRANCE</h5>
-					<p>« Les licences de l'Inalco sont conformes à la nomenclature nationale des diplômes avec la mention Langues, littératures et civilisations étrangères et régionales (LLCER). La licence à l'Inalco s'obtient avec 180 crédits (ECTS), ce qui correspond à 3 ans d'études supérieures. Pour obtenir une licence, l'étudiant a droit à 5 inscriptions. Les enseignements de licence comportent des enseignements fondamentaux de langue, littérature, civilisation, des enseignements d'approfondissement (liés au parcours choisi), des enseignements transversaux généraux, disciplinaires ou areaux (liés à une discipline ou à l'aire géographique du parcours suivi) et des enseignements libres ou d'ouverture. »</p>
-					<a href="#0" class="cd-timeline__read-more">Read more</a>
-					<span class="cd-timeline__date">Feb 18</span>
-				</div> <!-- cd-timeline__content -->
-			</div> <!-- cd-timeline__block -->
-
-			<div class="cd-timeline__block js-cd-block">
-				<div class="cd-timeline__img cd-timeline__img--picture js-cd-img">
-					<img src="img/201614.svg" alt="Movie">
-				</div> <!-- cd-timeline__img -->
-
-				<div class="cd-timeline__content js-cd-content">
-					<h2>Baccalauréat scientifique</h2>
-					<h5><a href="https://www.google.fr/maps/place/Lycee+Polyvalent+Charles+Baudelaire/@49.1014733,2.5022558,17z/data=!3m1!4b1!4m5!3m4!1s0x47e638c973e9b5b1:0xf4d732acc1fe6980!8m2!3d49.1014733!4d2.5044445" target="blank"><i class="fas fa-location-arrow"></i></a> LYCÉE CHARLES BAUDELAIRE, FOSSES (95), FRANCE</h5>
-					<p>« Le bac S s'adresse aux élèves motivés par les matières scientifiques (mathématiques, physique-chimie...), l'écologie et l'agronomie, l'informatique et les sciences du numérique.<sup>[7]»</sup>
-					</p>
-					<span class="cd-timeline__date">2011</span>
-				</div> <!-- cd-timeline__content -->
-			</div> <!-- cd-timeline__block -->
+		<div id="diplomas">
+			<h1><?= $diplomas ?></h1>
+			<div class="timeline">
+			  	<div class="diplomas-left">
+			  		<div class="arrow-right">
+			    	</div>
+				    <div class="content">
+					      <h2>2017</h2>
+					      <p>Le diplôme de compétence en langue (DCL) est un diplôme national professionnel créé spécialement pour les adultes. Il répond aux besoins du monde économique. Son originalité : évaluer les compétences langagières dans une situation proche de la réalité de travail. En fonction de leur performance, les candidats obtiennent le diplôme avec la mention d'un des niveaux du Cadre européen commun de référence pour les langues (CECRL). Le CNED propose une formation complète en espagnol pour préparer l'examen de certification.
+					      </p>
+				    </div>
+			  	</div>
+			  	<div class="diplomas-right">
+			  		<div class="arrow-left">
+			    	</div>
+				    <div class="content">
+					      <h2>2017</h2>
+					      <p>Le diplôme de compétence en langue (DCL) est un diplôme national professionnel créé spécialement pour les adultes. Il répond aux besoins du monde économique. Son originalité : évaluer les compétences langagières dans une situation proche de la réalité de travail. En fonction de leur performance, les candidats obtiennent le diplôme avec la mention d'un des niveaux du Cadre européen commun de référence pour les langues (CECRL). Le CNED propose une formation complète en espagnol pour préparer l'examen de certification.
+					      </p>
+				    </div>
+				</div>
+			</div>
 		</div>
-		</section> <!-- cd-timeline -->
 		<div class="chat-box">
 			<button>X</button>
-		  <div class="open">
-		  	<img src="IMG/214e2e2c-3a98-46f6-9b61-50c57a0d8fca-fadb0362-e723-4ab1-868d-9e256437ef3e-v1.png">
-		  	<!-- ON PASSE LES VARIABLES PHP EN JQUERY -->
-		  	<script>
-		  	var chatbox1 = <?php echo json_encode($chatbox1); ?>;
- 			var chatbox2 = <?php echo json_encode($chatbox2); ?>;
-			</script>
-		  	<h4><?= $chatbox1 ?></h4>
-		  <div class="box">
-		  </div>
-		  </div>
+		  	<div class="open">
+			  	<img src="IMG/214e2e2c-3a98-46f6-9b61-50c57a0d8fca-fadb0362-e723-4ab1-868d-9e256437ef3e-v1.png">
+			  	<!-- ON PASSE LES VARIABLES PHP EN JQUERY -->
+			  	<script>
+				  	var chatbox1 = <?php echo json_encode($chatbox1); ?>;
+		 			var chatbox2 = <?php echo json_encode($chatbox2); ?>;
+				</script>
+			  	<h4><?= $chatbox1 ?></h4>
+				<div class="box">
+				</div>
+		  	</div>
 		</div>
 		<div id="contact">
 			<?php include "contact-" . $lang . ".phtml"; ?>
