--- a/PHTML/index.phtml
+++ b/PHTML/index.phtml
@@ -47,7 +47,7 @@
 						<a href="#competences"><?= $competences ;?></a>
 					</li>
 					<li>
-						<a href="#"><?= $portfolio ;?></a>
+						<a href="#portfolio"><?= $portfolio ;?></a>
 					</li>
 					<li>
 						<a href="#diplomas"><?= $diplomas ;?></a>
@@ -75,7 +75,8 @@
 		</div>
 	</header>
 	<main>
-		<div id="introduction">
+		<div id="about">
+			<h1><?= $about ;?></h1>
 			<div id="introduction-me">
 				<!-- Place somewhere in the <body> of your page -->
 				<div class="flexslider carousel">
@@ -142,6 +143,7 @@
 			</div>
 		</div>
 		<div id="competences">
+			<h1><?= $competences ?></h1>
 			<div id="informatic">
 				<div class="left">
 				    <div class="hex-row">
@@ -253,25 +255,28 @@
 				</div>
 			</div>
 		</div>
-		<div id="buttons">
-			<button value="realisations"></button>
-			<button value="pictures"></button>
-			<button value="others"></button>
-		</div>
-		<div id="realisations">
-			<?php foreach($realisations as $realisation): ?>
-				<a href=""><img src="IMG/<?= $realisation['Photo'] ?>"></a>
-			<?php endforeach; ?>
-		</div>
-		<div id="pictures">
-			<ul>
-				<?php foreach($voyages as $voyage): ?>
-					<img src="IMG/<?= $voyage['Image'] ?>">
+		<div id="portfolio">
+			<h1><?= $portfolio ?></h1>
+			<div id="buttons">
+				<button value="realisations"></button>
+				<button value="pictures"></button>
+				<button value="others"></button>
+			</div>
+			<div id="realisations">
+				<?php foreach($realisations as $realisation): ?>
+					<a href=""><img src="IMG/<?= $realisation['Photo'] ?>"></a>
 				<?php endforeach; ?>
-			</ul>
-		</div>
-		<div id="canvas">
-			<?php include "canvas-" . $lang . ".phtml"; ?>
+			</div>
+			<div id="pictures">
+				<ul>
+					<?php foreach($voyages as $voyage): ?>
+						<img src="IMG/<?= $voyage['Image'] ?>">
+					<?php endforeach; ?>
+				</ul>
+			</div>
+			<div id="canvas">
+				<?php include "canvas-" . $lang . ".phtml"; ?>
+			</div>
 		</div>
 		<div id="diplomas">
 			<h1><?= $diplomas ?></h1>
@@ -294,6 +299,15 @@
 					      </p>
 				    </div>
 				</div>
+				<div class="diplomas-left">
+			  		<div class="arrow-right">
+			    	</div>
+				    <div class="content">
+					      <h2>2017</h2>
+					      <p>Le diplôme de compétence en langue (DCL) est un diplôme national professionnel créé spécialement pour les adultes. Il répond aux besoins du monde économique. Son originalité : évaluer les compétences langagières dans une situation proche de la réalité de travail. En fonction de leur performance, les candidats obtiennent le diplôme avec la mention d'un des niveaux du Cadre européen commun de référence pour les langues (CECRL). Le CNED propose une formation complète en espagnol pour préparer l'examen de certification.
+					      </p>
+				    </div>
+			  	</div>
 			</div>
 		</div>
 		<div class="chat-box">
@@ -311,6 +325,7 @@
 		  	</div>
 		</div>
 		<div id="contact">
+			<h1><?= $contact ?></h1>
 			<?php include "contact-" . $lang . ".phtml"; ?>
 		</div>
 	</main>
