--- a/PHTML/contact-de.phtml
+++ b/PHTML/contact-de.phtml
@@ -1,20 +1,20 @@
 <div id="contact-de">
 	<div id="form">
 		<img src="IMG/4d373c62-acb2-4215-9f0c-d74b92e3536c-fadb0362-e723-4ab1-868d-9e256437ef3e-v1.png" alt="contact me">
-		<h2 class="sentence">Que voulez-vous que je</h2>
+		<h2 class="sentence">Was kann ich für euch</h2>
 		<div class="rotate">
-		  <span>code</span>
-		  <span>programme</span>
-		  <span>développe</span>
-		  <span>builde</span>
-		  <span>crée</span>
+			<span>schreiben</span>
+			<span>programmieren</span>
+			<span>entwickeln</span>
+			<span>erstellen</span>
+			<span>kodieren</span>
 		</div>
-		<h2 class="sentence">pour vous aujourd'hui ?</h2>
+		<h2 class="sentence">?</h2>
 		<form>
 			<ul class="form-group">
 		        <li>
 		        	<span class="icon-case"><i class="fa fa-male"></i></span>
-			    	<input type="text" name="name" id="name" placeholder="Nom et prénom." data-rule="required" data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."/>
+			    	<input type="text" name="name" id="name" placeholder="Name und Vorname." data-rule="required" data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."/>
 			    </li>
 			    <br/><br/>
 			    <li>
@@ -24,23 +24,23 @@
 			   	<br/><br/>
 		       	<li>
 		       		<span class="icon-case"><i class="fas fa-university"></i></span>
-			    	<input type="text" name="city" id="city" data-rule="required" placeholder="Ville et pays." data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."/>
+			    	<input type="text" name="city" id="city" data-rule="required" placeholder="Stadt und Land." data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."/>
 		       	</li>
 		       	<br/><br/>
 		   		<li>
 		   			<span class="icon-case"><i class="fas fa-comment-alt"></i></span>
-			    	<input type="text" name="object" id="object" data-rule="required" placeholder="Objet." data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."/>
+			    	<input type="text" name="object" id="object" data-rule="required" placeholder="Betreff." data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."/>
 		   		</li>
 		   		<br/><br/>
 			   	<li>
 			   		<span class="icon-case"><i class="fas fa-comments"></i></span>
-			    	<textarea type="text" name="message" id="message" data-rule="required" placeholder="Message." data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."></textarea>
+			    	<textarea type="text" name="message" id="message" data-rule="required" placeholder="Nachricht." data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."></textarea>
 			   	</li>
 			</ul>
 			<br>
 			<div class="buttons">
-				<button type="reset" name="button">Annuler</button>
-				<button type="submit" name="button">Envoyer</button>
+				<button type="reset" name="button">Abbrechen</button>
+				<button type="submit" name="button" disabled>Versenden</button>
 			</div>
 		</form>
 	</div>
