--- a/CSS/index.css
+++ b/CSS/index.css
@@ -270,7 +270,7 @@ header #title h1{
 #instructions-1{
   font-size: 25px;
   font-family: Fredericka the Great;
-  color: #EEAA7B;
+  color: #800000;
   width: 25%;
   margin-left: 5%;
 
@@ -279,7 +279,7 @@ header #title h1{
 #instructions-2 {
   font-size: 25px;
   font-family: Fredericka the Great;
-  color: #EEAA7B;
+  color: #800000;
   width: 25%;
   margin-top: 5%;
 }
@@ -290,7 +290,7 @@ header #title h1{
   height: 0;
   border-style: solid;
   border-width: 25px 43.3px 25px 0;
-  border-color: transparent #eeab7b transparent transparent;
+  border-color: transparent tan transparent transparent;
   display: inline-block;
   margin-top: 10%;
   margin-right: 10%;
@@ -332,11 +332,11 @@ header #title h1{
 }
 
 #canvas {
-    margin: 0 10% 5% 10%;
-    box-shadow: 0 11px 11px rgba(0, 0, 0, 0.5);
-    background-color: #3b8b43;
-    display: none;
-  }
+  margin: 0 10% 5% 10%;
+  box-shadow: 0 11px 11px rgba(0, 0, 0, 0.5);
+  background-color: #3b8b43;
+  display: none;
+}
 
 
 #competences .right h3{
