--- a/CSS/index.css
+++ b/CSS/index.css
@@ -373,6 +373,22 @@ header #title h1{
   display: none;
 }
 
+#works{
+  display: none;
+  border-radius: 5px;
+  padding: 2% 10% 0 10%;
+}
+
+#works img{
+  height: 100px;
+  width: 100px;
+}
+
+#works img, #works a{
+  display: block;
+}
+
+
 
 #competences .right h3{
 	text-transform: uppercase;
@@ -386,7 +402,8 @@ header #title h1{
 }
 
 #portfolio{
-  padding-top: 3%;
+  padding-top: 1%;
+  padding-bottom: 1%;
 }
 
 #portfolio #buttons{
@@ -415,7 +432,7 @@ header #title h1{
 	border-radius: 50%;
 	outline: none;
 }
-#buttons button:last-child{
+#buttons button:nth-child(3){
   background:url(../IMG/432541.svg);
   background-size: 70%;
   background-repeat: no-repeat;
@@ -426,9 +443,19 @@ header #title h1{
   outline: none;
 }
 
+#buttons button:last-child{
+  background:url(../IMG/1161202.svg);
+  background-size: 70%;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
+  outline: none;
+}
 /* MAIN */
 
-main #about h1, main #competences h1, main #diplomas h1, main #portfolio h1, main #contact h1{
+main #about h1, main #competences h1, main #diplomas h1, main #portfolio h1, main #contact > h1{
   text-align: center;
   font-family: 'Charmonman', cursive;
   text-transform: capitalize;
@@ -439,7 +466,8 @@ main #about h1, main #competences h1, main #diplomas h1, main #portfolio h1, mai
 /* DIPLOMES */
 
 #diplomas{
-  margin: 5% 5% 1% 5%;
+  padding:5% 5% 1% 5%;
+  background-image: linear-gradient(to bottom, white 0%, #e6e9f0 10%, #eef1f5 50%, white 100%);
 }
 
 
@@ -540,7 +568,7 @@ main #pictures img:hover{
     background-repeat: no-repeat;
     background-position: top;
     background-size: 115%;
-    padding-bottom: 57%;
+    padding-bottom: 1%;
   }
 
   #contact-en{
@@ -548,7 +576,7 @@ main #pictures img:hover{
     background-repeat: no-repeat;
     background-position: center left;
     background-size: 135%;
-    padding-bottom: 60%;
+    padding-bottom: 1%;
   }
 
   #contact-ro{
@@ -564,7 +592,7 @@ main #pictures img:hover{
     background-repeat: no-repeat;
     background-position: center;
     background-size: 130%;
-    padding-bottom: 60%;
+    padding-bottom: 5%;
   }
 
   #contact-de{
@@ -578,13 +606,44 @@ main #pictures img:hover{
   #contact #form {
     background:rgba(255,255,255,0.8);
     width: 40%;
-    position: absolute;
     margin: 3% 5% 0 5%;
 
   }
 
+ #contact #downloads a{
+ 
+}
 
+  #contact #downloads h1{
+    font-size: 20px;
+  }
 
+  #contact #downloads{
+
+    margin-top: 3%;
+    margin-left: 10%;
+    width: 30%;
+    font-family: 'EB Garamond', serif;
+    text-align: center;
+  }
+
+  #form, #contact #downloads{
+    display: inline-block;
+    vertical-align: top;
+  }
+ 
+  #downloads-1, #downloads-2, #downloads-3 {
+    margin-bottom: 5%;
+    padding: 2%;
+    background:rgba(255,255,255,0.8);
+  }
+  #downloads-3{
+    display: none;
+  }
+  #downloads img{
+    width: 30%;
+  }
+ 
   #form img {
     width: 25%;
     margin: 0 37.5%;
@@ -801,17 +860,6 @@ footer .fa-snapchat-ghost{
   cursor: pointer;
 }
 
-footer #downloads a{
-	text-decoration: none;
-	border:1px solid #22adf5;
-  color: #22adf5;
-	text-align: center;
-	padding: 1% 2%;
-}
-
-footer #downloads {
-	margin-left:10%;
-}
 
 
 
