--- a/PHTML/index.phtml
+++ b/PHTML/index.phtml
@@ -37,6 +37,7 @@
 			<div id="title">
 				<h1>Maxime J.</h1>
 				<p><?= $introduction1 ;?></p>
+				<p><?= $introduction4 ;?></p>
 			</div>
 			<nav id="menu">
 				<ul>
@@ -306,7 +307,7 @@
 			    	</div>
 				    <div class="content">
 					      <h2>2017</h2>
-					      <p>Le diplôme de compétence en langue (DCL) est un diplôme national professionnel créé spécialement pour les adultes. Il répond aux besoins du monde économique. Son originalité : évaluer les compétences langagières dans une situation proche de la réalité de travail. En fonction de leur performance, les candidats obtiennent le diplôme avec la mention d'un des niveaux du Cadre européen commun de référence pour les langues (CECRL). Le CNED propose une formation complète en espagnol pour préparer l'examen de certification.
+					      <p>« Le bac S s'adresse aux élèves motivés par les matières scientifiques (mathématiques, physique-chimie...), l'écologie et l'agronomie, l'informatique et les sciences du numérique.[7]»
 					      </p>
 				    </div>
 			  	</div>
@@ -332,6 +333,21 @@
 		</div>
 	</main>
 	<footer>
+		<div id="clapperboard">
+			<ul id="credits">
+				<li><b>Mentions légales</b></li>
+				<li>© 2018 Codeur et Directeur de la publication</li>
+				<li><i class="fas fa-user-circle"></i> Maxime Jacquette</li>
+				<li><i class="fas fa-envelope-open"></i> maxime.j.pro@free.fr</li>
+				<li><i class="fas fa-phone-volume"></i> +33 7 83 89 96 37</li>
+				<li><i class="fas fa-location-arrow"></i> 06400 Cannes</li>
+				<li>Mis en ligne par FREE</li>
+				<li>Siège Social de Free</li> 
+				<li>8 Rue de la Ville-l’Évêque</li>
+				<li>75008, Paris</li>
+				<li>01 73 50 20 00</li>
+			</ul>
+		</div>
 		<div id="social">
 			<h4><?= $networks ;?></h4>
 			<div class="circle">
