--- a/PHTML/index.phtml
+++ b/PHTML/index.phtml
@@ -335,7 +335,7 @@
 	<footer>
 		<div id="clapperboard">
 			<ul id="credits">
-				<li><b>Mentions légales</b></li>
+				<li><b><?= $credits ?></b></li>
 				<li>© 2018 Codeur et Directeur de la publication</li>
 				<li><i class="fas fa-user-circle"></i> Maxime Jacquette</li>
 				<li><i class="fas fa-envelope-open"></i> maxime.j.pro@free.fr</li>
