--- a/PHTML/contact-ro.phtml
+++ b/PHTML/contact-ro.phtml
@@ -1,20 +1,20 @@
 <div id="contact-ro">
 	<div id="form">
 		<img src="IMG/4d373c62-acb2-4215-9f0c-d74b92e3536c-fadb0362-e723-4ab1-868d-9e256437ef3e-v1.png" alt="contact me">
-		<h2 class="sentence">¿Qué quiere que</h2>
+		<h2 class="sentence">Ce vreți să</h2>
 		<div class="rotate">
-		  <span>codifico</span>
-		  <span>programo</span>
-		  <span>desarrollo</span>
-		  <span>diseño</span>
-		  <span>construyo</span>
+			<span>codez</span>
+			<span>programez</span>
+			<span>dezvolt</span>
+			<span>construiesc</span>
+			<span>creez</span>
 		</div>
-		<h2 class="sentence">para usted hoy?</h2>
+		<h2 class="sentence">pentru dumneavoastră astăzi ?</h2>
 		<form>
 			<ul class="form-group">
 		        <li>
 		        	<span class="icon-case"><i class="fa fa-male"></i></span>
-		    		<input type="text" name="name" id="name" placeholder="Nombre y Apellido." data-rule="required" data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."/>
+		    		<input type="text" name="name" id="name" placeholder="Nume și prenume." data-rule="required" data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."/>
 			    </li>
 			    <br/><br/>
 			    <li>
@@ -24,23 +24,23 @@
 			   	<br/><br/>
 		       	<li>
 		       		<span class="icon-case"><i class="fas fa-university"></i></span>
-		    		<input type="text" name="city" id="city" data-rule="required" placeholder="Ciudad y país." data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."/>
+		    		<input type="text" name="city" id="city" data-rule="required" placeholder="Orașul și țara." data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."/>
 		       	</li>
 		       	<br/><br/>
 		   		<li>
 		   			<span class="icon-case"><i class="fas fa-comment-alt"></i></span>
-		    		<input type="text" name="object" id="object" data-rule="required" placeholder="Objeto." data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."/>
+		    		<input type="text" name="object" id="object" data-rule="required" placeholder="Subiect." data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."/>
 		   		</li>
 		   		<br/><br/>
 			   	<li>
 			   		<span class="icon-case"><i class="fas fa-comments"></i></span>
-		    		<textarea type="text" name="message" id="message" data-rule="required" placeholder="Mensaje." data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."></textarea>
+		    		<textarea type="text" name="message" id="message" data-rule="required" placeholder="Mesaj." data-msg="Vérifiez votre saisie sur les champs : Le champ 'Nom' doit être renseigné."></textarea>
 			   	</li>
 			</ul>
 			<br>
 			<div class="buttons">
-				<button type="reset" name="button">Annuler</button>
-				<button type="submit" name="button">Envoyer</button>
+				<button type="reset" name="button">Anula</button>
+				<button type="submit" name="button">Trimite</button>
 			</div>
 		</form>
 	</div>
